Criando os componentes Menu, MenuTree e Sidebar

--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "admin-lte": "2.3.6",
+    "axios": "^0.20.0",
+    "font-awesome": "4.7.0",
+    "ionicons": "3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-redux": "^7.2.1",
+    "react-redux-toastr": "^7.6.5",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
+    "redux-multi": "^0.1.12"
   },
   "scripts": {
     "start": "react-scripts start",
