--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
-    "redux-multi": "^0.1.12"
+    "redux-multi": "^0.1.12",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
